css/custom.css
html,
body {
    background-color: #ecebeb;
    font-family: 'Helvetica';
    overflow-x: hidden;
    position: relative;
}

p {
    line-height: 1.3;
    color: #000;
    font-weight: 500;
}

.go-btn {
    height: 45px;
}

footer {
    background-color: #ecebeb;
}

.btn-warning {
    background-color: #fdc838;
}

.btn-warning:hover {
    background-color: #81c141;
    border: none;
}

.bg-nav {
    background-color: #f2f3f7;
}

.bg-bottom-nav {
    background-color: #ecebeb;
}

.mr-5 {
    margin-right: 5px;
}

.bg-success {
    background: #81c141 !important;
}

.btn-success {
    background: #81c141 !important;
}

.btn-success:hover {
    background: #64a81f !important;
}

.ml-5 {
    margin-left: 5px;
}

.w-100 {
    width: 100px;
}

.w-150 {
    width: 150px;
}

.w-250 {
    width: 250px;
}

.min-h-350 {
    min-height: 350px;
}

.login {
    width: 40%;
    padding: 2rem;
}

.login .form-control {
    background-color: transparent;
    border: none;
    border-bottom: 1px solid #000;
    font-size: 14px;
    color: #000;
    border-radius: 0;
    padding: 0;
}

.form-control:focus {
    box-shadow: none;
}

.form-floating>label {
    padding: 15px;
}

.sm-links {
    background: #81c141;
    padding: 5px;
    border-radius: 100%;
    height: 30px;
    width: 30px;
    display: flex;
    justify-content: center;
    color: #fff;
    text-decoration: none;
}

.sm-links:hover {
    border: 1px solid #81c141;
}

.cart-qty {
    width: 50px;
    height: 20px;
}

.slider-actions {
    position: absolute;
    display: flex;
    justify-content: space-between;
    top: 32%;
    z-index: 9999;
    width: 104%;
    left: -2%;
}

.slider-actions .btn {
    background: #ffffffba;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 35px;
    height: 35px;
}

.owl-theme .owl-controls .owl-page {
    display: none !important;
}


/*******header*******/

.navbar {
    padding: 0rem;
    /* margin-bottom: 2rem; */
    z-index: 10000;
}

.dropdown .dropdown-menu {
    border-radius: 0;
}

.nav-link {
    color: #333;
}

.brand-logo {
    width: 10% !important;
}

@media only screen and (max-width: 1450px) {
    .login {
        width: 50%;
        padding: 2rem;
    }
}

@media only screen and (max-width: 992px) {
    .login {
        width: 80%;
        padding: 2rem;
    }
}


/* Medium devices (tablets, 768px and up) 
  The navbar toggle appears at this breakpoint */

@media only screen and (max-width: 768px) {
    .dropdown:hover .dropdown-menu {
        display: block;
        margin-top: 0;
        border-radius: 0;
        position: fixed;
    }
    .login {
        width: 100%;
        padding: 2rem;
    }
    .brand-logo {
        width: 50% !important;
    }
    .main_image {
        width: auto;
        height: auto;
    }
    .mb-none {
        display: none;
    }
    .mb-p-0 {
        padding: 0.5rem !important;
    }
    .col-xs-6 {
        width: 50%;
    }
    .col-xs-4 {
        width: 40%;
    }
}

.dropdown {
    float: left;
    overflow: hidden;
}

.dropdown .dropbtn {
    font-size: 16px;
    border: none;
    outline: none;
    color: #333;
    padding: 14px 16px;
    background-color: inherit;
    font: inherit;
    margin: 0;
    text-transform: uppercase;
    font-weight: 600;
}

.navbar a:hover,
.dropdown:hover .dropbtn {
    color: #81c141;
}

.dropdown-content {
    display: none;
    position: fixed;
    background-color: #f9f9f9;
    width: 50%;
    left: 0;
    /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
    z-index: 1;
    border: 1px solid #81c141;
    margin: 0 10px;
    /* padding: 10px; */
}

.dropdown-content a {
    color: #333;
}

.dropdown-content .header {
    padding: 16px;
    color: white;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.list-style-none {
    list-style: none;
}

.bg-gray {
    background: #ecebeb;
}


/***Product view page***/

.card {
    border: none;
    overflow: hidden
}

.thumbnail_images ul {
    list-style: none;
    justify-content: center;
    display: flex;
    align-items: center;
    padding: 0;
    /* margin-top: 10px */
}

.thumbnail_images ul li {
    margin: 5px;
    /* padding: 10px; */
    border: 2px solid #eee;
    cursor: pointer;
    transition: all 0.5s
}

.thumbnail_images ul li:hover {
    border: 2px solid #000
}

.main_image {
    display: flex;
    justify-content: center;
    align-items: center;
    /* border-bottom: 1px solid #eee; */
    height: 400px;
    width: 100%;
    overflow: hidden
}

.heart {
    height: 29px;
    width: 29px;
    background-color: #eaeaea;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center
}

.content p {
    font-size: 12px
}

.ratings span {
    font-size: 14px;
    margin-left: 12px
}

.right-side {
    position: relative
}

.box-shadow-none {
    box-shadow: none !important;
}

.btn:focus {
    box-shadow: none !important;
}

.sm-icons {
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.btn-dark {
    background-color: #282828;
    border-color: #282828;
}

